--- a/Spotify.com clone/style.css
+++ b/Spotify.com clone/style.css
@@ -205,7 +205,16 @@ a{
 
 .controls{
     width: 25%;
-   
+}
+.controls-icons{
+    height: 0.90rem;
+    margin-right: 1.775rem ;
+    opacity: 0.7;
+    justify-content: space-evenly;
+}
+.footer-icons{
+    
+    margin-right: 10px ;
 }
 .player-controls{
     display: flex;
